@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+
+defvar x = 23#B as string; /* { dg-error "not allowed" } */
