@@ -1,0 +1,4 @@
+/* { dg-do compile } */
+
+defvar x = "23#B" as offset<int,B>; /* { dg-error "not allowed" } */
+
